--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=6a9b6a5261f587e3d06c146f8c244dfc
+APP_SECRET=4c08a557ec964dd47ee6bbe774980a01
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
@@ -28,9 +28,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:test@127.0.0.1:3306/Symfony_CRM?serverVersion=3&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
-DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -43,3 +42,7 @@ DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name"
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
