--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,33 @@ version: '3'
 services:
 ###> doctrine/doctrine-bundle ###
   database:
-    image: postgres:${POSTGRES_VERSION:-14}-alpine
+    image: mysql
+    ports:
+      - "3306:3306"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+      MYSQL_DATABASE: Symfony_CRM
+      MYSQL_USER: rooter
+      MYSQL_PASSWORD: test
+      MYSQL_ROOT_PASSWORD: test
     volumes:
-      - db-data:/var/lib/postgresql/data:rw
+      - database-data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
+    networks:
+      - default
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    links:
+      - database:db
+    ports:
+      - 8080:80
+    environment:
+      MYSQL_USER: rooter
+      MYSQL_PASSWORD: test
+      MYSQL_ROOT_PASSWORD: test
 ###< doctrine/doctrine-bundle ###
 
 volumes:
 ###> doctrine/doctrine-bundle ###
-  db-data:
+  database-data:
 ###< doctrine/doctrine-bundle ###
