yarn erfolgreich installiert

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,18 @@ version: '3'
 
 services:
 ###> doctrine/doctrine-bundle ###
-  database:
+  db:
     image: mysql
     ports:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: Symfony_CRM
-      MYSQL_USER: rooter
+      MYSQL_USER: rootUser
       MYSQL_PASSWORD: test
       MYSQL_ROOT_PASSWORD: test
     volumes:
-      - database-data:/var/lib/postgresql/data:rw
+      - mysql:/var/lib/mysql
+      # - db-data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
     networks:
@@ -20,16 +21,16 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     links:
-      - database:db
+      - db:db
     ports:
       - 8080:80
     environment:
-      MYSQL_USER: rooter
+      MYSQL_USER: rootUser
       MYSQL_PASSWORD: test
       MYSQL_ROOT_PASSWORD: test
 ###< doctrine/doctrine-bundle ###
 
 volumes:
 ###> doctrine/doctrine-bundle ###
-  database-data:
+  mysql:
 ###< doctrine/doctrine-bundle ###
